turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:11: error: missing arguments for method setCouleur in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
else setCouleur.black
     ^