turtleart.lessons.turtleart.Main.DiskTwo.scala.code
override def run() {
var a=0;
for(j<-0 to 18){
for(i<-0 to 19){
	avance(100);
	recule(100);
	droite(1);
}
if(a%2==0){setCouleur(Color.red);}
else setCouleur.black
a=a+1;
}
}
